--- a/ankimorphs/ui/readability_report_generator.ui
+++ b/ankimorphs/ui/readability_report_generator.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>680</width>
+    <width>1035</width>
     <height>600</height>
    </rect>
   </property>
@@ -203,22 +203,50 @@ Report</string>
             </column>
             <column>
              <property name="text">
-              <string>Total Morphs</string>
+              <string>Unique
+Morphs</string>
              </property>
             </column>
             <column>
              <property name="text">
-              <string>Known</string>
+              <string>Unique 
+Known</string>
              </property>
             </column>
             <column>
              <property name="text">
-              <string>Learning</string>
+              <string>Unique
+Learning</string>
              </property>
             </column>
             <column>
              <property name="text">
-              <string>Unknown</string>
+              <string>Unique
+Unknown</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Total
+Morphs</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Total
+Known</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Total
+Learning</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Total
+Unknown</string>
              </property>
             </column>
            </widget>
@@ -239,22 +267,50 @@ Report</string>
             </column>
             <column>
              <property name="text">
-              <string>Total Morphs</string>
+              <string>Unique
+Morphs</string>
              </property>
             </column>
             <column>
              <property name="text">
-              <string>Known</string>
+              <string>Unique 
+Known</string>
              </property>
             </column>
             <column>
              <property name="text">
-              <string>Learning</string>
+              <string>Unique
+Learning</string>
              </property>
             </column>
             <column>
              <property name="text">
-              <string>Unknown</string>
+              <string>Unique
+Unknown</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Total
+Morphs</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Total
+Known</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Total
+Learning</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Total
+Unknown</string>
              </property>
             </column>
            </widget>
@@ -267,17 +323,6 @@ Report</string>
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>680</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
