selecting rows works

--- a/ankimorphs/ui/settings_dialog.ui
+++ b/ankimorphs/ui/settings_dialog.ui
@@ -22,7 +22,7 @@
      <item>
       <widget class="QTabWidget" name="tabWidget">
        <property name="currentIndex">
-        <number>2</number>
+        <number>1</number>
        </property>
        <widget class="QWidget" name="tab">
         <attribute name="title">
@@ -259,78 +259,101 @@
         <attribute name="title">
          <string>Note Filters</string>
         </attribute>
-        <layout class="QVBoxLayout" name="verticalLayout_4">
+        <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
-          <layout class="QVBoxLayout" name="verticalLayout_3">
+          <widget class="QTableWidget" name="note_filters_table">
+           <column>
+            <property name="text">
+             <string>Note Type</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Tags</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Field</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Morphemizer</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Morph Priority</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Read</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Modify</string>
+            </property>
+           </column>
+          </widget>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_2">
            <item>
-            <widget class="QTableWidget" name="note_filters_table">
-             <column>
-              <property name="text">
-               <string>Note Type</string>
-              </property>
-             </column>
-             <column>
-              <property name="text">
-               <string>Tags</string>
-              </property>
-             </column>
-             <column>
-              <property name="text">
-               <string>Field</string>
-              </property>
-             </column>
-             <column>
-              <property name="text">
-               <string>Morphemizer</string>
-              </property>
-             </column>
-             <column>
-              <property name="text">
-               <string>Morph Priority</string>
-              </property>
-             </column>
-             <column>
-              <property name="text">
-               <string>Read</string>
-              </property>
-             </column>
-             <column>
-              <property name="text">
-               <string>Modify</string>
-              </property>
-             </column>
+            <widget class="QPushButton" name="deleteRowPushButton">
+             <property name="text">
+              <string>Delete Selected Row</string>
+             </property>
             </widget>
            </item>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_2">
-             <item>
-              <widget class="QPushButton" name="deleteRowPushButton">
-               <property name="text">
-                <string>Delete Selected Row</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <spacer name="horizontalSpacer_3">
-               <property name="orientation">
-                <enum>Qt::Horizontal</enum>
-               </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>40</width>
-                 <height>20</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
-             <item>
-              <widget class="QPushButton" name="addNewRowPushButton">
-               <property name="text">
-                <string>Add New Row</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
+            <spacer name="horizontalSpacer_3">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QPushButton" name="addNewRowPushButton">
+             <property name="text">
+              <string>Add New Row</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_26">
+           <property name="topMargin">
+            <number>10</number>
+           </property>
+           <item>
+            <widget class="QPushButton" name="restoreNoteFiltersPushButton">
+             <property name="text">
+              <string>Restore Default Note Filters Settings</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_23">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
            </item>
           </layout>
          </item>
@@ -1446,7 +1469,7 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="recalcToolbarKnownRadioButtonGroup"/>
   <buttongroup name="buttonGroup"/>
+  <buttongroup name="recalcToolbarKnownRadioButtonGroup"/>
  </buttongroups>
 </ui>
